// Vitest Snapshot v1

exports[`fixtures:basic > Get cats navigation > basic-navigation-cats 1`] = `
[
  {
    "children": [
      {
        "draft": false,
        "id": "content:cats:index.md",
        "partial": false,
        "slug": "/cats",
        "title": "Cats list",
      },
      {
        "draft": false,
        "id": "content:cats:persian.md",
        "partial": false,
        "slug": "/cats/persian",
        "title": "Persian",
      },
      {
        "draft": false,
        "id": "content:cats:ragdoll.md",
        "partial": false,
        "slug": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "slug": "/cats",
    "title": "Cats list",
  },
]
`;

exports[`fixtures:basic > Get cats navigation > basic-navigation-dogs 1`] = `
[
  {
    "children": [
      {
        "draft": false,
        "id": "content:dogs:bulldog.md",
        "partial": false,
        "slug": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "draft": false,
        "id": "content:dogs:German Shepherd.md",
        "partial": false,
        "slug": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "slug": "/dogs",
    "title": "Dogs",
  },
]
`;

exports[`fixtures:basic > Get contents index > basic-index-body 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Index",
        },
      ],
      "props": {
        "id": "index",
      },
      "tag": "h1",
      "type": "element",
    },
  ],
  "toc": {
    "depth": 2,
    "links": [],
    "searchDepth": 2,
    "title": "",
  },
  "type": "root",
}
`;

exports[`fixtures:basic > Get navigation > basic-navigation 1`] = `
[
  {
    "children": [
      {
        "draft": false,
        "id": "content:cats:index.md",
        "partial": false,
        "slug": "/cats",
        "title": "Cats list",
      },
      {
        "draft": false,
        "id": "content:cats:persian.md",
        "partial": false,
        "slug": "/cats/persian",
        "title": "Persian",
      },
      {
        "draft": false,
        "id": "content:cats:ragdoll.md",
        "partial": false,
        "slug": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "id": "content:cats:index.md",
    "slug": "/cats",
    "title": "Cats list",
  },
  {
    "children": [
      {
        "draft": false,
        "id": "content:dogs:bulldog.md",
        "partial": false,
        "slug": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "draft": false,
        "id": "content:dogs:German Shepherd.md",
        "partial": false,
        "slug": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "slug": "/dogs",
    "title": "Dogs",
  },
  {
    "children": [
      {
        "draft": false,
        "id": "fa-ir:fa:index.md",
        "partial": false,
        "slug": "/",
        "title": "سلام",
      },
    ],
    "id": "fa-ir:fa:index.md",
    "slug": "/",
    "title": "سلام",
  },
  {
    "children": [
      {
        "draft": false,
        "id": "content:index.md",
        "partial": false,
        "slug": "/",
        "title": "Index",
      },
    ],
    "id": "content:index.md",
    "slug": "/",
    "title": "Index",
  },
]
`;
